// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> set as disabled matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={true}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#212121",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#005a9e",
        "cursor": "default",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "0.5",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
      },
      "rootHovered": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#0078d4",
        "color": "#005a9e",
      },
    }
  }
  type="button"
>
  <Block
    className=

        {
          visibility: visible;
        }
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> set as loading matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={true}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#212121",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#005a9e",
        "cursor": "default",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
      },
      "rootHovered": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#0078d4",
        "color": "#005a9e",
      },
    }
  }
  type="button"
>
  <Block
    className=

        {
          visibility: hidden;
        }
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    />
  </Block>
  <span
    className=

        {
          left: 50%;
          position: absolute;
          top: 50%;
          transform: translate(-50%, -50%);
        }
  >
    <Spinner
      color="light"
      hideText={true}
      isCentered={true}
      size="small"
    />
  </span>
</BaseButton>
`;

exports[`<Button /> with additional className matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button TEST_CLASSNAME"
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#212121",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#005a9e",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
      },
      "rootHovered": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#0078d4",
        "color": "#005a9e",
      },
    }
  }
  type="button"
>
  <Block
    className=

        {
          visibility: visible;
        }
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with aria label matches its snapshot 1`] = `
<BaseButton
  ariaLabel="Aria description"
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#212121",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#005a9e",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
      },
      "rootHovered": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#0078d4",
        "color": "#005a9e",
      },
    }
  }
  type="button"
>
  <Block
    className=

        {
          visibility: visible;
        }
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with button type matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#212121",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#005a9e",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
      },
      "rootHovered": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#0078d4",
        "color": "#005a9e",
      },
    }
  }
  type="button"
>
  <Block
    className=

        {
          visibility: visible;
        }
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with default options matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#212121",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#005a9e",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
      },
      "rootHovered": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#0078d4",
        "color": "#005a9e",
      },
    }
  }
  type="button"
>
  <Block
    className=

        {
          visibility: visible;
        }
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with fullWidth matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#212121",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#005a9e",
        "cursor": "pointer",
        "display": "block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": "100%",
      },
      "rootFocused": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
      },
      "rootHovered": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#0078d4",
        "color": "#005a9e",
      },
    }
  }
  type="button"
>
  <Block
    className=

        {
          visibility: visible;
        }
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with icon matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#212121",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#005a9e",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
      },
      "rootHovered": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#0078d4",
        "color": "#005a9e",
      },
    }
  }
  type="button"
>
  <Block
    className=

        {
          visibility: visible;
        }
    textAlign="center"
    textSize="mediumSub"
  >
    <span
      className=

          {
            padding-left: 0px;
            padding-right: 5px;
          }
    >
      <Accounts />
    </span>
    Click Me
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    >
      <span
        className=

            {
              padding-left: 0px;
              padding-right: 5px;
            }
      >
        <Accounts />
      </span>
    </div>
  </Block>
</BaseButton>
`;

exports[`<Button /> with icon on the right matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#212121",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#005a9e",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
      },
      "rootHovered": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#0078d4",
        "color": "#005a9e",
      },
    }
  }
  type="button"
>
  <Block
    className=

        {
          visibility: visible;
        }
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <span
      className=

          {
            padding-left: 4px;
            padding-right: 0px;
          }
    >
      <Accounts />
    </span>
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    >
      <span
        className=

            {
              padding-left: 4px;
              padding-right: 0px;
            }
      >
        <Accounts />
      </span>
    </div>
  </Block>
</BaseButton>
`;

exports[`<Button /> with invalid href matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  href="#"
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#212121",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#005a9e",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
      },
      "rootHovered": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#0078d4",
        "color": "#005a9e",
      },
    }
  }
  type=""
>
  <Block
    className=

        {
          visibility: visible;
        }
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with primary color matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#005a9e",
        "borderColor": "#005a9e",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#ffffff",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "#106ebe",
        "borderColor": "#106ebe",
        "color": "#ffffff",
      },
      "rootHovered": Object {
        "backgroundColor": "#106ebe",
        "borderColor": "#106ebe",
        "color": "#ffffff",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#004578",
        "borderColor": "#004578",
        "color": "#ffffff",
      },
    }
  }
  type="button"
>
  <Block
    className=

        {
          visibility: visible;
        }
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with primary color set as loading matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={true}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#005a9e",
        "borderColor": "#005a9e",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#ffffff",
        "cursor": "default",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "#106ebe",
        "borderColor": "#106ebe",
        "color": "#ffffff",
      },
      "rootHovered": Object {
        "backgroundColor": "#106ebe",
        "borderColor": "#106ebe",
        "color": "#ffffff",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#004578",
        "borderColor": "#004578",
        "color": "#ffffff",
      },
    }
  }
  type="button"
>
  <Block
    className=

        {
          visibility: hidden;
        }
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    />
  </Block>
  <span
    className=

        {
          left: 50%;
          position: absolute;
          top: 50%;
          transform: translate(-50%, -50%);
        }
  >
    <Spinner
      color="dark"
      hideText={true}
      isCentered={true}
      size="small"
    />
  </span>
</BaseButton>
`;

exports[`<Button /> with reset type matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#212121",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#005a9e",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
      },
      "rootHovered": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#0078d4",
        "color": "#005a9e",
      },
    }
  }
  type="reset"
>
  <Block
    className=

        {
          visibility: visible;
        }
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with small size matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#212121",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#005a9e",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "4px 9px 6px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
      },
      "rootHovered": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#0078d4",
        "color": "#005a9e",
      },
    }
  }
  type="button"
>
  <Block
    className=

        {
          visibility: visible;
        }
    textAlign="center"
    textSize="small"
  >
    Click Me
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with small size set as loading matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={true}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#212121",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#005a9e",
        "cursor": "default",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "4px 9px 6px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
      },
      "rootHovered": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#0078d4",
        "color": "#005a9e",
      },
    }
  }
  type="button"
>
  <Block
    className=

        {
          visibility: hidden;
        }
    textAlign="center"
    textSize="small"
  >
    Click Me
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    />
  </Block>
  <span
    className=

        {
          left: 50%;
          position: absolute;
          top: 50%;
          transform: translate(-50%, -50%);
        }
  >
    <Spinner
      color="light"
      hideText={true}
      isCentered={true}
      size="xSmall"
    />
  </span>
</BaseButton>
`;

exports[`<Button /> with small size with icon matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#212121",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#005a9e",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "4px 9px 6px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
      },
      "rootHovered": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#0078d4",
        "color": "#005a9e",
      },
    }
  }
  type="button"
>
  <Block
    className=

        {
          visibility: visible;
        }
    textAlign="center"
    textSize="small"
  >
    <span
      className=

          {
            padding-left: 0px;
            padding-right: 5px;
          }
    >
      <Accounts />
    </span>
    Click Me
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    >
      <span
        className=

            {
              padding-left: 0px;
              padding-right: 5px;
            }
      >
        <Accounts />
      </span>
    </div>
  </Block>
</BaseButton>
`;

exports[`<Button /> with submit type matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#212121",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#005a9e",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
      },
      "rootHovered": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#0078d4",
        "color": "#005a9e",
      },
    }
  }
  type="submit"
>
  <Block
    className=

        {
          visibility: visible;
        }
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with valid href matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  href="https://www.yammer.com"
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#212121",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "#005a9e",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
      },
      "rootHovered": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#deecf9",
        "color": "#005a9e",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#0078d4",
        "color": "#005a9e",
      },
    }
  }
  type=""
>
  <Block
    className=

        {
          visibility: visible;
        }
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className=

          {
            height: 0px;
            overflow: hidden;
            visibility: hidden;
          }
    />
  </Block>
</BaseButton>
`;
